--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "deploy": "wrangler publish",
     "test": "vitest"
   },
+  "dependencies": {
+    "@resvg/resvg-wasm": "^2.4.1",
+    "react": "^18.2.0",
+    "satori": "^0.4.2",
+    "yoga-wasm-web": "0.3.0"
+  },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230307.0",
+    "@types/react": "^18.0.28",
     "typescript": "^4.9.5",
     "vitest": "^0.29.2",
     "wrangler": "2.12.0"
