--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@resvg/resvg-wasm": "^2.4.1",
     "react": "^18.2.0",
     "satori": "^0.4.2",
-    "yoga-wasm-web": "0.3.0"
+    "yoga-wasm-web": "0.3.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230307.0",
@@ -20,5 +20,10 @@
     "typescript": "^4.9.5",
     "vitest": "^0.29.2",
     "wrangler": "2.12.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "yoga-wasm-web@0.3.2": "patches/yoga-wasm-web@0.3.2.patch"
+    }
   }
 }
